# Telegram-UI

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docs/: PACKAGING.md
learn/: download_test.py  explore_folder.py  upload_test.py
scripts/: build_windows_exe.ps1
src/: __init__.py  config.py  file_manager.py  main.py  utils.py
src/compression/: FFMPEG.py  README.md  __init__.py
src/dbJson/: README.md  __init__.py  file_message.py  telegram_message.py
src/file_manager/: __init__.py  file_manager_main.py  file_manager_utils.py
src/file_manager/download/: file_manager_download.py
src/file_types/: LRV.py  README.md  __init__.py  file.py  image.py  video.py
src/telegram/: README.md  __init__.py  telegram_manager_client.py
src/ui/: README.md  __init__.py  file_browser_pane.py  pop_up_progress_bar.py  pop_up_textinput.py  sync_jobs_panel.py
tests/: README.md  conftest.py
tests/compression/: test_FFMPEG__ensure_ffmpeg.py
tests/main/: test_main__back_UI.py  test_main__create_folder_UI.py  test_main__delete_UI.py  test_main__download_file_UI.py  test_main__init.py  test_main__main_async.py  test_main__move_UI.py  test_main__open_preview_UI.py  test_main__rename_UI.py  test_main__run_app.py  test_main__run_tk.py  test_main__sync_UI.py  test_main__upload_file_UI.py  test_main__wait_window_async.py
tests/utils/: test_utils__free_disk_usage.py  test_utils__get_enviroment_value.py  test_utils__phone_match.py  test_utils__prompt_config.py  test_utils__size_value_to_human.py
(+93 files in other folders)
