[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ui"
version = "0.1.0"
description = "Telegram-UI: upload/manage files to Telegram as a cloud"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click==8.3.0",
  "colorama==0.4.6",
  "dotenv==0.9.9",
  "hachoir==3.3.0",
  "looseversion==1.3.0",
  "pillow==11.3.0",
  "pyaes==1.6.1",
  "pyasn1==0.6.1",
  "python-dotenv==1.1.1",
  "rethinkdb==2.4.10.post1",
  "rsa==4.9.1",
  "six==1.17.0",
  "Telethon==1.41.2",
  "tgcrypto"
]

[project.scripts]
# The project places Python modules under `src/`.
# Expose the executable entrypoint as the `main:run_app` callable.
telegram-ui = "main:run_app"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "config", "utils"]

[tool.setuptools.packages.find]
where = ["src"]
